--- a/lm/css/index.css
+++ b/lm/css/index.css
@@ -1,1 +1,33 @@
 
+ul {
+  padding: 0;
+  width: 100%;
+}
+
+li {
+  display: inline;
+}
+
+a {
+  outline: none;
+  text-decoration: none;
+  display: inline-block;
+  width: 19.5%;
+  margin-right: 0.625%;
+  text-align: center;
+  line-height: 3;
+  color: rgb(72, 195, 15);
+}
+
+li:last-child a {
+  margin-right: 0;
+}
+
+a:link, a:visited, a:focus {
+  background: black;
+}
+
+a:active {
+  background: red;
+  color: white;
+}
