--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+
+body {
+	background-color: rgb( 252, 194, 97 );
+}
+
 body,html {
   margin: 0;
   font-family: sans-serif;
@@ -35,3 +40,4 @@ a:active {
   background: red;
   color: white;
 }
+
